# InteligentComplaintAnalysisForFinancialServices

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: unittests.yml
data/: README.md
data/processed/: filtered_complaints.csv.dvc  final_filtered_complaints.csv.dvc
models/mistral_condensed/: mistral-7b-instruct-v0.1.Q4_K_M.gguf.dvc
notebooks/: EDA_and_Data_Preprocessing.ipynb  README.md  rag-core-logic-and-evaluation.ipynb  text-chunking_embeding_and_vector-store_indexing.ipynb
src/core/: ComplaintVectorPipeline.py
src/models/: RAG_Pipeline.py
src/services/streamlit/: rag_interface.py
src/utils/: utils.py
tests/unit/: test_ComplaintVectorPipeline.py  test_RAGAgent.py  test_utils.py
vector_store/: complaints_index.faiss.dvc
